# athena-training

./: .gitignore  Makefile  pyproject.toml
.config/: general.json
backend/: main.py  pyproject.toml
backend/src/: db.py  models.py
backend/src/api/: todos.py
backend/src/utils/: logger.py
frontend/: package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: todos.js
frontend/src/pages/: Home.jsx  Todo.jsx
src/: sample.py
src/utils/: config.py
tests/utils/: test_config.py
